--- a/kde/discover/PKGBUILD
+++ b/kde/discover/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org> 
 
 pkgname=discover
-pkgver=5.22.2.1
+pkgver=5.22.3
 pkgrel=1
 pkgdesc='KDE and Plasma resources management GUI'
 arch=(x86_64 powerpc64le powerpc)
@@ -11,22 +11,27 @@ license=(LGPL)
 depends=(knewstuff kitemmodels kcmutils kidletime qt5-graphicaleffects appstream-qt archlinux-appstream-data
          hicolor-icon-theme kirigami2 discount kuserfeedback)
 makedepends=(extra-cmake-modules plasma-framework packagekit-qt5 flatpak)
-makedepends_x86_64=(fwupd)
 optdepends=('packagekit-qt5: to manage packages from Arch Linux repositories' 'flatpak: Flatpak packages support')
-optdepends_x86_64=('fwupd: firmware update support')
 groups=(plasma)
-source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('33a035fe4dcb87daefa6d7e74c397286f9441ff0dda142b784db1473c6837c97'
-            'SKIP')
+source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig}
+        discover-no-kcm.patch::https://invent.kde.org/plasma/discover/-/commit/725ae1f2.patch)
+sha256sums=('1e293d000afdb3db8066a5164c385c8f7138fbc3fb244bcc341f904a30e723a1'
+            'SKIP'
+            '23de6e2ce77324d84dffb36955a8cee7c32b4ff2f1ff003291773894bc23dc07')
 validpgpkeys=('2D1D5B0588357787DE9EE225EC94D18F7F05997E'  # Jonathan Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
 
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < discover-no-kcm.patch # Don't build KCM
+}
+
 build() {
   cmake -B build -S $pkgname-$pkgver \
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
-    -DBUILD_TESTING=OFF
+    -DBUILD_TESTING=OFF \
+    -DWITH_KCM=OFF
   cmake --build build
 }
 
