--- a/kde/plasma-wayland-protocols/PKGBUILD
+++ b/kde/plasma-wayland-protocols/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=plasma-wayland-protocols
 pkgver=1.3.0
 pkgrel=1
 pkgdesc="Plasma Specific Protocols for Wayland"
-arch=(any)
+arch=(x86_64 powerpc64le powerpc)
 url="https://kde.org/plasma-desktop"
 license=(LGPL)
 depends=()
