--- a/kde/plasma-workspace/PKGBUILD
+++ b/kde/plasma-workspace/PKGBUILD
@@ -6,19 +6,19 @@
 
 pkgbase=plasma-workspace
 pkgname=(plasma-workspace plasma-wayland-session)
-pkgver=5.22.2.1
+pkgver=5.22.3
 pkgrel=1
 pkgdesc='KDE Plasma Workspace'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(knotifyconfig ksystemstats ktexteditor libqalculate kde-cli-tools appstream-qt
+depends=(knotifyconfig ksystemstats ktexteditor libqalculate appstream-qt kdesu #kde-cli-tools appstream-qt
          xorg-xrdb xorg-xsetroot kactivitymanagerd kholidays xorg-xmessage milou prison kwin
          plasma-integration kpeople kactivities-stats libkscreen kquickcharts kuserfeedback kio-extras kio-fuse)
 makedepends=(extra-cmake-modules kdoctools gpsd baloo networkmanager-qt plasma-wayland-protocols kunitconversion kinit)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgbase-$pkgver.tar.xz{,.sig} kde.pam)
-sha256sums=('3c802d06cbe33480b348b945ace5b3ee1cc3559976bb98eb2fd5d763a0ee4360'
+sha256sums=('d95c0a1557a112aabcf502656b7554e88130dfcae0515c0014669304faa5a4d6'
             'SKIP'
             '00090291204baabe9d6857d3b1419832376dd2e279087d718b64792691e86739')
 validpgpkeys=('2D1D5B0588357787DE9EE225EC94D18F7F05997E'  # Jonathan Riddell <jr@jriddell.org>
