--- a/glib2-static/PKGBUILD
+++ b/glib2-static/PKGBUILD
@@ -2,28 +2,25 @@
 # Maintainer: nightuser <nightuser.android@gmail.com>
 
 pkgname=glib2-static
-pkgver=2.66.1
+pkgver=2.68.3
 pkgrel=1
 pkgdesc="Low level core library: Static library"
 url="https://wiki.gnome.org/Projects/GLib"
 license=(LGPL2.1)
-arch=(x86_64 powerpc64le)
+arch=(x86_64 aarch64 powerpc64le powerpc)
 depends=()
 makedepends=(gettext zlib libffi shared-mime-info python libelf git util-linux meson dbus)
 checkdepends=(desktop-file-utils)
 options=('!docs' '!libtool' '!emptydirs' '!strip' 'staticlibs')
-source=("http://ftp.gnome.org/pub/gnome/sources/glib/${pkgver%.*}/glib-$pkgver.tar.xz"
-  '1683.patch')
-sha256sums=('a269ffe69fbcc3a21ff1acb1b6146b2a5723499d6e2de33ae16ccb6d2438ef60'
-  'e1913090c7cdd4c7db12651858a8381be28ae61f19d5e5e02a33f4c7c74c926d')
+source=("https://download.gnome.org/sources/glib/${pkgver%.*}/glib-$pkgver.tar.xz")
+sha256sums=('e7e1a3c20c026109c45c9ec4a31d8dcebc22e86c69486993e565817d64be3138')
 
 prepare() {
   cd "glib-$pkgver"
-  patch -Np1 -i "$srcdir/1683.patch"
 }
 
 build() {
-  CFLAGS+=' -Wno-unused-result'
+  CFLAGS+=' -Wno-unused-result -Wno-stringop-overflow'
   arch-meson "glib-$pkgver" _build \
     --default-library static \
     --buildtype release \
