--- a/lapack/PKGBUILD
+++ b/lapack/PKGBUILD
@@ -6,15 +6,15 @@
 
 pkgbase=lapack
 pkgname=(lapack blas cblas lapacke lapack-doc)
-pkgver=3.9.1
+pkgver=3.10.0
 pkgrel=1
-url="https://www.netlib.org/lapack"
-pkgdesc="Linear Algebra PACKage"
+url='https://www.netlib.org/lapack'
+pkgdesc='Linear Algebra PACKage'
 makedepends=(gcc-fortran cmake python doxygen)
 arch=(x86_64 powerpc64le powerpc)
 license=(custom)
-source=($pkgbase-$pkgver.tar.gz::"https://github.com/Reference-LAPACK/lapack/archive/v$pkgver.tar.gz" LICENSE.blas)
-sha256sums=('d0085d2caf997ff39299c05d4bacb6f3d27001d25a4cc613d48c1f352b73e7e0'
+source=(https://github.com/Reference-LAPACK/lapack/archive/v$pkgver/$pkgname-$pkgver.tar.gz LICENSE.blas)
+sha256sums=('328c1bea493a32cac5257d84157dc686cc3ab0b004e2bea22044e0a59f6f8a19'
             '2420cd1331c5754071966389b26e6196c5cb086a2ade0080953af62e0c6d4107')
 
 build() {
@@ -73,4 +73,5 @@ package_lapack-doc() {
 
   mkdir -p "$pkgdir"/usr/share
   cp -r lapack-$pkgver/DOCS/man "$pkgdir"/usr/share
+  rm "$pkgdir"/usr/share/man/man3/{MIN,MAX}.3 # conflict with man-pages
 }
