--- a/kitty/PKGBUILD
+++ b/kitty/PKGBUILD
@@ -6,18 +6,18 @@
 
 pkgbase=kitty
 pkgname=(kitty kitty-terminfo)
-pkgver=0.21.1
+pkgver=0.22.0
 pkgrel=1
 pkgdesc="A modern, hackable, featureful, OpenGL-based terminal emulator"
 arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/kovidgoyal/kitty"
 license=('GPL3')
 depends=('python3' 'freetype2'  'fontconfig' 'wayland' 'libx11' 'libxkbcommon-x11' 'libxi'
-         'hicolor-icon-theme' 'libgl' 'libcanberra' 'dbus' 'lcms2')
+         'hicolor-icon-theme' 'libgl' 'dbus' 'lcms2')
 makedepends=('libxinerama' 'libxcursor' 'libxrandr' 'wayland-protocols')
 source=("${pkgname}-${pkgver}.tar.xz::https://github.com/kovidgoyal/${pkgbase}/releases/download/v${pkgver}/${pkgbase}-${pkgver}.tar.xz"
         "${pkgname}-${pkgver}.tar.xz.sig::https://github.com/kovidgoyal/${pkgbase}/releases/download/v${pkgver}/${pkgbase}-${pkgver}.tar.xz.sig")
-sha512sums=('86b1e03f8227375cc46dabffd972a131c8a33d55d87888b2cf67d97da6749144408778b8ac126dbc29fe3850f272e5ae0c4313194ebb130ae3417b04b76cb987'
+sha512sums=('081d065cc91f65c8e79559cad63208c5a4b2f64aa4b975722bd94d4e1530622e441c8ee73a549f83c64e381a3c9368d7848fa6487c488bc48821b154392fe7d0'
             'SKIP')
 validpgpkeys=('3CE1780F78DD88DF45194FD706BC317B515ACE7C') # Kovid Goyal
 
@@ -28,7 +28,8 @@ build() {
 
 package_kitty() {
   depends+=('kitty-terminfo')
-  optdepends=('imagemagick: viewing images with icat')
+  optdepends=('imagemagick: viewing images with icat'
+              'libcanberra: playing "bell" sound on terminal bell')
 
   cd "$srcdir/$pkgname-$pkgver"
 
