--- a/sassc/PKGBUILD
+++ b/sassc/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=sassc
 pkgver=3.6.2
-pkgrel=2
+pkgrel=3
 pkgdesc="C implementation of Sass CSS preprocessor."
 arch=(x86_64 powerpc64le powerpc)
-url="http://libsass.org/"
+url="https://sass-lang.com"
 license=("MIT")
 depends=("libsass")
 source=("$pkgname-$pkgver.tar.gz::https://github.com/sass/$pkgname/archive/$pkgver.tar.gz")
