--- a/diffutils/PKGBUILD
+++ b/diffutils/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=diffutils
-pkgver=3.7
-pkgrel=4
+pkgver=3.8
+pkgrel=1
 pkgdesc='Utility programs used for creating patch files'
 arch=(x86_64 powerpc64le powerpc)
 url='https://www.gnu.org/software/diffutils'
@@ -13,8 +13,8 @@ license=('GPL3')
 depends=('glibc' 'bash')
 validpgpkeys=('155D3FC500C834486D1EEA677FD9FCCB000BEEEE') # Jim Meyering
 source=("https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.xz"{,.sig})
-md5sums=('4824adc0e95dbbf11dfbdfaad6a1e461'
-         'SKIP')
+sha256sums=('a6bdd7d1b31266d11c4f4de6c1b748d4607ab0231af5188fc2533d0ae2438fec'
+            'SKIP')
 
 prepare() {
   cd $pkgname-$pkgver
