--- a/xorg/xf86-video-amdgpu/PKGBUILD
+++ b/xorg/xf86-video-amdgpu/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Laurent Carlier <lordheavym@gmail.com>
 
 pkgname=xf86-video-amdgpu
-pkgver=19.1.0
-pkgrel=2
+pkgver=21.0.0
+pkgrel=1
 pkgdesc="X.org amdgpu video driver"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('systemd-libs' 'mesa')
@@ -13,9 +13,10 @@ makedepends=('xorg-server-devel' 'systemd' 'X-ABI-VIDEODRV_VERSION=24.0')
 conflicts=('xorg-server<1.20.0' 'X-ABI-VIDEODRV_VERSION<24' 'X-ABI-VIDEODRV_VERSION>=25')
 groups=('xorg-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2{,.sig})
-sha512sums=('ccdaa2378492da1a2f3d18fedacd1318c4708da534a8a959276a82730d5420619d83ad1ec8d7835c55655fe56123cd9bffb44e6223c5a97033c01f598af4a173'
+sha512sums=('44ccc8ddc36f09d1608cf58b6cf85dda090671c46c5643e9453f7d67f4d6850c3c9753eba43539d45773198b8042898a50153b5225780e4b2852410c5521314a'
             'SKIP')
-validpgpkeys=('B09FAF35BE914521980951145A81AF8E6ADBB200') # Michel Daenzer <michel@daenzer.net>
+#validpgpkeys=('B09FAF35BE914521980951145A81AF8E6ADBB200') # Michel Daenzer <michel@daenzer.net>
+validpgpkeys=('017E91A875CBA321258380F19B4EE4F98474DE40') # "Alex Deucher <alexdeucher@gmail.com>"
 
 build() {
   cd ${pkgname}-${pkgver}
@@ -27,7 +28,8 @@ build() {
   export CXXFLAGS=${CXXFLAGS/-fno-plt}
   export LDFLAGS=${LDFLAGS/,-z,now}
 
-  CFLAGS+=' -fcommon' \
+  #CFLAGS+=' -fcommon' # https://wiki.gentoo.org/wiki/Gcc_10_porting_notes/fno_common
+
   ./configure --prefix=/usr \
     --enable-glamor
   make
