--- a/ocaml/ocaml-result/PKGBUILD
+++ b/ocaml/ocaml-result/PKGBUILD
@@ -4,12 +4,12 @@
 _pkgname=result
 pkgname=ocaml-${_pkgname}
 pkgver=1.5
-pkgrel=3
+pkgrel=4
 pkgdesc="Compatibility Result module"
-arch=(x86_64 powerpc64le powerpc)
+arch=(i686 x86_64 armv7h powerpc64le powerpc)
 url="https://github.com/janestreet/result"
 license=('BSD')
-depends=('ocaml')
+depends=('ocaml>=4.12.0')
 makedepends=('ocaml-findlib' 'dune')
 options=('!strip')
 source=("https://github.com/janestreet/result/archive/${pkgver}.tar.gz")
