--- a/ocaml/ocaml-integers/PKGBUILD
+++ b/ocaml/ocaml-integers/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=ocaml-integers
 pkgver=0.4.0
-pkgrel=4
+pkgrel=4.1
 pkgdesc='Library for binding to C libraries using pure OCaml'
-arch=(x86_64 powerpc64le powerpc)
+arch=(i686 x86_64 powerpc64le powerpc)
 url=https://github.com/ocamllabs/ocaml-integers
 license=('custom')
 options=('!strip')
-makedepends=('dune' 'ocaml-topkg' 'ocaml-findlib' 'ocaml-compiler-libs>=4.11.0' 'ocamlbuild' 'opam')
+makedepends=('dune' 'ocaml-topkg' 'ocaml-findlib' 'ocaml-compiler-libs>=4.12.0' 'ocamlbuild' 'opam')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/ocamllabs/$pkgname/archive/$pkgver.tar.gz")
 sha256sums=('ba6e087606c622533ecca9dc4c0917a3cc183e73e3e7d8511b68e21183ef913f')
 
