--- a/brltty/PKGBUILD
+++ b/brltty/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=brltty
 pkgver=6.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Braille display driver for Linux/Unix"
 arch=(x86_64 powerpc64le powerpc)
 url="https://brltty.app"
@@ -41,6 +41,8 @@ sha512sums=('687fbb30703d4c9fd7b55d27fabecf26c58f7c032c82bcdee1405259da74f85516e
             '32ba91271e2247b4a330cd213ed75b591268cb99a79c2efd9ae675804faee027c6b2f782768cb2329a65fc914ca2400b2901f35ce1fc2522c6691b343799eb02')
 b2sums=('c321e1bdd6d7956620fa354edcf8eee0c8a0011ebfabb4cff98cb5a22c23d5667e6b73cbdbf282c9c36cc4d50ded4e147174c45da36e3fec03cc0a8d2121459a'
         '036e36d558594bb06af1eb41ff5fc9ae52ccf4bad54556c3f4f81a5e2f31f574039835e5e756455527c327a73d563a3db54a9f32e3478545a2a22c2725aaeee2')
+b2sums=('c321e1bdd6d7956620fa354edcf8eee0c8a0011ebfabb4cff98cb5a22c23d5667e6b73cbdbf282c9c36cc4d50ded4e147174c45da36e3fec03cc0a8d2121459a'
+        '036e36d558594bb06af1eb41ff5fc9ae52ccf4bad54556c3f4f81a5e2f31f574039835e5e756455527c327a73d563a3db54a9f32e3478545a2a22c2725aaeee2')
 
 prepare() {
   cd "${pkgname}-${pkgver}"
@@ -50,7 +52,7 @@ prepare() {
 
 build() {
   cd "${pkgname}-${pkgver}"
-  ./configure --prefix=/usr \
+  ./configure --prefix=/usr --build=${CHOST} \
               --sysconfdir=/etc \
               --localstatedir=/var \
               --mandir=/usr/share/man \
@@ -58,8 +60,7 @@ build() {
               --with-tables-directory=/usr/share/brltty \
               --with-writable-directory=/run/brltty \
               --enable-gpm \
-              --disable-stripping \
-	      --build=${CHOST}
+              --disable-stripping
   make
 }
 
