--- a/pipewire/PKGBUILD
+++ b/pipewire/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=pipewire
 pkgname=(pipewire alsa-card-profiles pipewire-docs pipewire-media-session
          pipewire-alsa pipewire-jack pipewire-pulse gst-plugin-pipewire
          pipewire-zeroconf)
-pkgver=0.3.32
+pkgver=0.3.33
 pkgrel=1
 epoch=1
 pkgdesc="Low-latency audio/video router and processor"
@@ -15,11 +15,11 @@ license=(MIT)
 arch=(x86_64 powerpc64le powerpc)
 makedepends=(git meson doxygen xmltoman valgrind libpulse alsa-lib libusb
              gst-plugins-base rtkit dbus sdl2 ncurses libsndfile bluez-libs sbc
-             libopenaptx libfdk-aac avahi webrtc-audio-processing)
+             libfreeaptx libfdk-aac avahi webrtc-audio-processing)
 makedepends_powerpc64le=(libldac)
 makedepends_x86_64=(libldac)
 checkdepends=(desktop-file-utils)
-_commit=41ce3092756ab27106881f4246e54bf32ea5adbe  # tags/0.3.32
+_commit=8119e5cdb4efc3325f5629cd1afe9957aa5c39dc  # tags/0.3.33
 source=("git+https://gitlab.freedesktop.org/pipewire/pipewire.git#commit=$_commit")
 sha256sums=('SKIP')
 
