--- a/liburcu/PKGBUILD
+++ b/liburcu/PKGBUILD
@@ -4,16 +4,16 @@
 # Contributor: Yggdrasil <tetzank at web dot de>
 
 pkgname=liburcu
-pkgver=0.12.2
+pkgver=0.13.0
 pkgrel=1
 pkgdesc="LGPLv2.1 userspace RCU (read-copy-update) library"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://lttng.org/urcu"
 license=('LGPL2.1')
 validpgpkeys=('2A0B4ED915F2D3FA45F5B16217280A9781186ACF')
 source=(https://lttng.org/files/urcu/userspace-rcu-${pkgver}.tar.bz2{,.asc})
 depends=()
-sha1sums=('4da300ff8ae7c2f33f092baa4df539fbf89a810c'
+sha1sums=('fd2ea98735b7a174ac539b8f4624040cbba9095e'
           'SKIP')
 
 build() {
