--- a/python/python-fonttools/PKGBUILD
+++ b/python/python-fonttools/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: flying sheep <flying-sheep@web.de>
 
 pkgname=python-fonttools
-pkgver=4.26.2
-pkgrel=3
+pkgver=4.27.0
+pkgrel=2
 pkgdesc='A library to manipulate font files from Python'
 url='https://github.com/fonttools/fonttools'
 license=('MIT')
@@ -25,8 +25,12 @@ optdepends=('python-brotli: to compress/decompress WOFF 2.0 web fonts'
             'python-sympy: for symbolic font statistics analysis'
             'python-unicodedata2: for displaying the Unicode character names when dumping the cmap table with ttx'
             'python-zopfli: faster backend fom WOFF 1.0 web fonts compression')
+checkdepends=('python-brotli'
+              'python-fs'
+              'python-pytest'
+              'python-ufolib2')
 source=("https://github.com/fonttools/fonttools/archive/$pkgver/fonttools-$pkgver.zip")
-sha256sums=('343de533d4780d34ac8d7138dc933550064c9d54a4afded01180e57000381040')
+sha256sums=('e7c1b2dea4ffb2cb54cc9037d6252fd0362370d9675891b950cfae753d05e327')
 
 build() {
 	cd "fonttools-$pkgver"
@@ -34,9 +38,13 @@ build() {
 	python setup.py build
 }
 
+check() {
+	cd "fonttools-$pkgver"
+	PYTHONPATH=Lib pytest
+}
+
 package() {
 	cd "fonttools-$pkgver"
-	export PYTHONHASHSEED=0
 	python setup.py install --root="$pkgdir" --optimize=1 --skip-build
 	install -Dm0755 -t "$pkgdir/usr/share/licenses/$pkgname/" LICENSE
 }
