--- a/gtk3/PKGBUILD
+++ b/gtk3/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgbase=gtk3
 pkgname=(gtk3 gtk3-docs gtk3-demos)
-pkgver=3.24.30+29+gfe19b20492
-pkgrel=1
+pkgver=3.24.30+62+g8d04980f38
+pkgrel=2
 epoch=1
 pkgdesc="GObject-based multi-platform GUI toolkit"
 arch=(x86_64 powerpc64le powerpc)
@@ -13,12 +13,13 @@ url="https://www.gtk.org/"
 depends=(atk cairo libxcursor libxinerama libxrandr libxi libepoxy gdk-pixbuf2
          dconf libxcomposite libxdamage pango shared-mime-info at-spi2-atk
          wayland libxkbcommon adwaita-icon-theme json-glib librsvg
-         wayland-protocols desktop-file-utils mesa cantarell-fonts libcolord
-         rest libcups libcanberra fribidi iso-codes libcloudproviders tracker3
+         desktop-file-utils mesa cantarell-fonts libcolord rest libcups
+         libcanberra fribidi iso-codes libcloudproviders tracker3
          gtk-update-icon-cache)
-makedepends=(gobject-introspection gtk-doc git glib2-docs sassc meson)
+makedepends=(gobject-introspection gtk-doc git glib2-docs sassc meson
+             wayland-protocols)
 license=(LGPL)
-_commit=fe19b204923763c09cc1619b4d81203c18c32d20  # gtk-3-24
+_commit=8d04980f38d58bea7ba721a6ff2e3d38dfdc0486  # gtk-3-24
 source=("git+https://gitlab.gnome.org/GNOME/gtk.git#commit=$_commit"
         gtk-query-immodules-3.0.hook)
 sha256sums=('SKIP'
@@ -34,7 +35,7 @@ prepare() {
 }
 
 build() {
-  CFLAGS+=" -DG_ENABLE_DEBUG -DG_DISABLE_CAST_CHECKS"
+  CFLAGS+=" -DG_DISABLE_CAST_CHECKS"
   local meson_options=(
     -D broadway_backend=true
     -D cloudproviders=true
@@ -64,7 +65,7 @@ package_gtk3() {
   replaces=("gtk3-print-backends<=3.22.26-1")
   install=gtk3.install
 
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 
   install -Dm644 /dev/stdin "$pkgdir/usr/share/gtk-3.0/settings.ini" <<END
 [Settings]
