--- a/gst-plugins-good/PKGBUILD
+++ b/gst-plugins-good/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgbase=gst-plugins-good
 pkgname=(gst-plugins-good gst-plugin-gtk gst-plugin-qmlgl)
-pkgver=1.18.4
-pkgrel=2
+pkgver=1.18.5
+pkgrel=1
 pkgdesc="Multimedia graph framework - good plugins"
 url="https://gstreamer.freedesktop.org/"
 arch=(x86_64 powerpc64le powerpc)
@@ -17,7 +17,7 @@ makedepends=(python git meson jack2 gtk3 qt5-{tools,declarative,x11extras,waylan
 makedepends_x86_64=(nasm)
 checkdepends=(gst-plugins-base xorg-server-xvfb)
 options=(!emptydirs)
-_commit=941312f3d54c89475d5d50aa9dddc0a2987fcf5a  # tags/1.18.4^0
+_commit=56dec037a80266add6853e4b06e2dc379de757d1  # tags/1.18.5^0
 source=("git+https://gitlab.freedesktop.org/gstreamer/gst-plugins-good.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -44,14 +44,14 @@ check() (
   mkdir -p -m 700 "${XDG_RUNTIME_DIR:=$PWD/runtime-dir}"
   export XDG_RUNTIME_DIR
 
-  xvfb-run -s '-screen 0 1920x1080x24 -nolisten local +iglx -noreset' \
+  xvfb-run -s '-nolisten local' \
     meson test -C build --print-errorlogs
 )
 
 package_gst-plugins-good() {
   depends+=(libjack.so)
 
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 
   for _x in gtk qmlgl; do
     mkdir -p "$_x/lib/gstreamer-1.0"
