--- a/libssh2/PKGBUILD
+++ b/libssh2/PKGBUILD
@@ -6,8 +6,8 @@
 # Contributor: ice-man <icemanf@gmail.com>
 
 pkgname=libssh2
-pkgver=1.9.0
-pkgrel=3
+pkgver=1.10.0
+pkgrel=1
 pkgdesc="A library implementing the SSH2 protocol as defined by Internet Drafts"
 url="https://www.libssh2.org/"
 arch=(x86_64 powerpc64le powerpc)
@@ -17,14 +17,18 @@ provides=('libssh2.so')
 validpgpkeys=('27EDEAF22F3ABCEB50DB9A125CC908FDB71E12C2'   # Daniel Stenberg
               '914C533DF9B2ADA2204F586D78E11C6B279D5C91')  # Daniel Stenberg (old key)
 source=("https://www.libssh2.org/download/$pkgname-$pkgver.tar.gz"{,.asc})
-md5sums=('1beefafe8963982adc84b408b2959927'
-         'SKIP')
+sha256sums=('2d64e90f3ded394b91d3a2e774ca203a4179f69aebee03003e5a6fa621e41d51'
+            'SKIP')
 
 build() {
   cd "$pkgname-$pkgver"
 
   ./configure --prefix=/usr
   make
+}
+
+check() {
+  make -C "$pkgname-$pkgver" check
 }
 
 package() {
