--- a/wpewebkit/PKGBUILD
+++ b/wpewebkit/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=wpewebkit
-pkgver=2.32.3
+pkgver=2.32.4
 pkgrel=1
 pkgdesc="Web content engine for embedded devices"
 url="https://wpewebkit.org"
@@ -19,14 +19,17 @@ optdepends=('geoclue: Geolocation support'
             'gst-plugins-good: media decoding'
             'gst-plugins-bad: media decoding'
             'gst-libav: nonfree media decoding')
-source=($url/releases/$pkgname-$pkgver.tar.xz{,.asc})
-sha256sums=('859bd1bbe51026aecfb2b6f5c8c024d88fb69ac6fcdc74c788c9fbe9499d740d'
-            'SKIP')
+source=($url/releases/$pkgname-$pkgver.tar.xz{,.asc}
+        wpewebkit-no-ninja-colours.patch)
+sha256sums=('381f1422cbc319db1aa42dda48de39590ed90ac3bec6b81ec83f3f2cae5c3eeb'
+            'SKIP'
+            '82976d5ffb89c443cb1f55279eb929f5b4a629f7453c97b80a68a3f37da85050')
 validpgpkeys=('D7FCF61CF9A2DEAB31D81BD3F3D322D0EC4582C3'  # Carlos Garcia Campos <cgarcia@igalia.com>
               '5AA3BC334FD7E3369E7C77B291C559DBE4C9123B') # Adrián Pérez de Castro <aperez@igalia.com>
 
 prepare() {
   cd $pkgname-$pkgver
+  patch -Np1 -i ${srcdir}/wpewebkit-no-ninja-colours.patch
 }
 
 build() {
@@ -37,7 +40,7 @@ build() {
       CXXFLAGS="${CXXFLAGS/-O?/-Os}"
       EXTRA_CMAKE_FLAGS="-DENABLE_JIT=OFF
                          -DUSE_SYSTEMD=OFF
-                         -DUSE_LD_GOLD=OFF
+                         -DUSE_LD_GOLD=ON
                          -DCMAKE_CXX_FLAGS_RELEASE=-DNDEBUG
                          -DCMAKE_CXX_FLAGS_DEBUG=-DNDEBUG
                          -DCMAKE_CXX_FLAGS_RELWITHDEBINFO=-DNDEBUG
