--- a/gst-plugins-base/PKGBUILD
+++ b/gst-plugins-base/PKGBUILD
@@ -13,7 +13,7 @@ license=(LGPL)
 depends=(gstreamer orc libxv iso-codes libgudev mesa)
 makedepends=(alsa-lib cdparanoia libvisual libvorbis libtheora pango opus
              graphene libpng libjpeg gobject-introspection git meson
-             gtk3 qt5-{base,tools,x11extras} clutter sdl2 glu)
+             gtk3 qt5-{base,tools,x11extras} clutter sdl2 glu wayland-protocols)
 checkdepends=(xorg-server-xvfb)
 options=(!emptydirs)
 _commit=57fb883b3f8c6d7a397afc0dfc4a7c2e5af05579  # tags/1.18.5^0
