--- a/gst-plugins-bad/PKGBUILD
+++ b/gst-plugins-bad/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgbase=gst-plugins-bad
 pkgname=(gst-plugins-bad-libs gst-plugins-bad gst-plugin-opencv gst-plugin-wpe)
-pkgver=1.18.4
-pkgrel=11
+pkgver=1.18.5
+pkgrel=1
 pkgdesc="Multimedia graph framework - bad plugins"
 url="https://gstreamer.freedesktop.org/"
 arch=(x86_64 powerpc64le powerpc)
@@ -25,7 +25,7 @@ makedepends=(mjpegtools curl chromaprint libmms faad2 libdca libdvdnav
 makedepends_x86_64=(svthevcenc svt-hevc)
 checkdepends=(xorg-server-xvfb)
 options=(!emptydirs)
-_commit=8cb03bdf01ca6ad8c87f951bcd7962c3ca9f6860  # tags/1.18.4^0
+_commit=d3af58d5b31941caa26c3ded85d7a7b84a91f0cc  # tags/1.18.5^0
 source=("git+https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -37,8 +37,6 @@ pkgver() {
 
 prepare() {
   cd $pkgbase
-  git cherry-pick -n 68858358544dd3b7e20663f731db22fd74a78a45 # fix build with GCC 11
-  git cherry-pick -n a9fafd98b74fd184b178604095d35ac6105119b8 # fix build with OpenEXR 3
 }
 
 build() {
@@ -77,7 +75,7 @@ check() (
   export XDG_RUNTIME_DIR
 
   # elements_dtls test hangs sometimes
-  xvfb-run -s '-screen 0 1920x1080x24 -nolisten local +iglx -noreset' \
+  xvfb-run -s '-nolisten local' \
     meson test -C build --print-errorlogs || :
 )
 
