--- a/gd/PKGBUILD
+++ b/gd/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=gd
-pkgver=2.3.2
-pkgrel=4
+pkgver=2.3.3
+pkgrel=2
 pkgdesc="Library for the dynamic creation of images by programmers"
 arch=(x86_64 powerpc64le powerpc)
 url="https://libgd.github.io/"
@@ -11,8 +11,18 @@ license=('custom')
 depends=('fontconfig' 'libxpm' 'libwebp' 'libavif' 'libheif')
 optdepends=('perl: bdftogd script')
 checkdepends=('ttf-liberation')
-source=("https://github.com/libgd/libgd/archive/${pkgname}-${pkgver}.tar.gz")
-sha256sums=('dcc22244d775f469bee21dce1ea42552adbb72ba0cc423f9fa6a64601b3a1893')
+source=("https://github.com/libgd/libgd/archive/${pkgname}-${pkgver}.tar.gz"
+        'https://github.com/libgd/libgd/commit/bdc281eadb1d58d5c0c7bbc1125ee4674256df08.patch')
+sha256sums=('24429f9d0dbe0f865aaa4b1a63558242396ba9134e6cfd32ca5e486a84483350'
+            '2ae91e3e018440c74c1628bac5deed2851234f2b5bfea49bf805312c64d0115e')
+
+prepare() {
+  cd libgd-${pkgname}-${pkgver}
+
+  # Re-add macros that are used in PHP
+  # See https://github.com/php/php-src/pull/7490
+  patch -p1 -R -i "$srcdir/bdc281eadb1d58d5c0c7bbc1125ee4674256df08.patch"
+}
 
 build() {
   cd libgd-${pkgname}-${pkgver}
@@ -27,7 +37,7 @@ build() {
 check() {
   cd libgd-${pkgname}-${pkgver}
 
-  make check
+  TMP=$(mktemp -d) make check
 }
 
 package() {
