--- a/imagemagick/PKGBUILD
+++ b/imagemagick/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=imagemagick
 pkgname=(imagemagick imagemagick-doc)
-pkgver=7.1.0.6
+pkgver=7.1.0.8
 pkgrel=1
 pkgdesc='An image viewing/manipulation program'
 url='https://www.imagemagick.org/'
@@ -15,9 +15,9 @@ makedepends=(ghostscript openexr libwmf librsvg libxml2 openjpeg2 libraw opencl-
 checkdepends=(gsfonts ttf-dejavu)
 _relname=ImageMagick-${pkgver%%.*}
 _tarname=ImageMagick-${pkgver%.*}-${pkgver##*.}
-source=(https://imagemagick.org/download/$_tarname.tar.xz{,.asc}
+source=(https://download.imagemagick.org/ImageMagick/download/releases/$_tarname.tar.xz{,.asc}
         arch-fonts.diff)
-sha256sums=('2477c6bc0f933a5bc0971d4fef7ad652fe5072a83ca39d12522f56d92f18539e'
+sha256sums=('393280a93396cbb10f4a88e4dafaa03b0bc8031a86d92fb80948f814fc5d0c01'
             'SKIP'
             'a85b744c61b1b563743ecb7c7adad999d7ed9a8af816650e3ab9321b2b102e73')
 validpgpkeys=(D8272EF51DA223E4D05B466989AB63D48277377A)  # Lexie Parsimoniae
